Fix a few CSS layout issues.

--- a/public/styles/common.css
+++ b/public/styles/common.css
@@ -26,6 +26,12 @@ h1, h2 {
 h1 a, h2 a { text-decoration: none; }
 h1 a:hover, h2 a:hover { text-decoration: underline; }
 
+table { width: 100%; }
+col.caption { width: 150pt; }
+input { width: 100%; }
+input.checkbox { width: auto; }
+textarea { width: 100%; resize: vertical; }
+
 h1 {
 	font-size: 24pt;
 }
